--- a/spinal-cnn-frontend/src/pages/home/Home.css
+++ b/spinal-cnn-frontend/src/pages/home/Home.css
@@ -13,7 +13,7 @@
 .header h1 {
     font-size: 48px;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Geist Mono";
 }
 
 .home-page-body {
@@ -49,7 +49,7 @@ button:hover {
 
 p {
     font-size: 16px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Geist Mono";
     line-height: 10px;
 }
 
@@ -64,6 +64,10 @@ p {
 
 .classify-button {
     padding: 3rem 0;
+}
+
+.black-text {
+    color: black;
 }
 
 @keyframes fadeIn {
